Changed icon size and link colouring

--- a/css/main.css
+++ b/css/main.css
@@ -13,3 +13,8 @@
 .i-triceratops {
   background-image: url("../images/triceratops.svg");
 }
+
+.icon-link {
+  text-decoration: none;
+  color: black;
+}
